# ai-investor

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  portfolio.db  pyproject.toml
agents/fundamental_scout/: agent.py  prompt.py
ai_agents/decision_agent/: agent.py  prompt.py  schema.py
ai_agents/fundamental_scout/: agent.py  prompt.py  schema.py
ai_agents/opportunity_scout/: agent.py  prompt.py  schema.py
ai_agents/portfolio_allocation/: agent.py  prompt.py  schema.py
ai_agents/risk_analyst/: agent.py  prompt.py  schema.py
ai_agents/tools/: brave_rate_limiter.py  brave_search.py  cache.py  rate_limiter.py
execution/: simulator.py
execution/models/: portfolio_state.py  position.py  trade.py
market_data/: cache.py  models.py  provider.py  rate_limiter.py
persistence/: database.py  portfolio_repo.py  schema.sql  trade_repo.py
portfolio_calculator/: dataclasses.py  portfolio_calculator.py
scripts/: fetch_sp500_universe.py
universe/: sp500.py
